--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,47 @@
   }
 }
 
+html,
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  padding: 0;
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+  :before {
+    content: "";
+    content: "";
+    width: 100%;
+    height: 100vh;
+    background-image: url("/gradient_bg.jpg");
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+.text-shadow {
+  text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.3);
+}
+.adjacent-post .arrow-btn {
+  transition: width 300ms ease;
+  width: 50px;
+}
+.adjacent-post:hover .arrow-btn {
+  width: 60px;
+}
+.react-multi-carousel-list .arrow-btn {
+  transition: width 300ms ease;
+  width: 50px;
+}
+.react-multi-carousel-list .arrow-btn:hover {
+  width: 60px;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+* {
+  box-sizing: border-box;
 }
