--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,30 +18,17 @@
 
 html,
 body {
-  width: 100%;
-  height: 100vh;
-  background-image: url("/gradient_bg.jpg");
+  background: linear-gradient(
+    to right bottom,
+    #ecc9b2,
+    #dbc0a1,
+    #d7ebee,
+    #ffffff,
+    #ffffff
+  );
   z-index: -1;
-  background-position: 50% 50%;
+}
 
-}
-.text-shadow {
-  text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.3);
-}
-.adjacent-post .arrow-btn {
-  transition: width 300ms ease;
-  width: 50px;
-}
-.adjacent-post:hover .arrow-btn {
-  width: 60px;
-}
-.react-multi-carousel-list .arrow-btn {
-  transition: width 300ms ease;
-  width: 50px;
-}
-.react-multi-carousel-list .arrow-btn:hover {
-  width: 60px;
-}
 a {
   color: inherit;
   text-decoration: none;
